Don't decode URLs found in responses

BUG: 351652
FIXED-IN: 15.08.1